Test: 테스트 코드 작성 및 수정